<resources>
    <string name="errorTitle">Server Unreachable</string>
    <string name="errorMsg">LMStudy Server is currently unavailable.
        Please check your network connection and try again.\n\nLMStudy will now close.</string>
    <string name="next_label">Our Next Recommendation:</string>
    <string name="default_next">-- Empty --</string>
    <string name="default_forecast">No Assignments to Complete</string>
    <string name="forecast_prefix">You have % items due\u0020</string>
    <string name="forecast_suffix1">today</string>
    <string name="forecast_suffix2">in % days</string>
    <string name="default_menuTitle">TITLE</string>
    <string name="default_menuItem">ITEM</string>
    <string name="LMS_menuTitle">LMS Management</string>
    <string name="Course_menuTitle">Course Management</string>
    <string name="Settings_menuTitle">User Settings</string>
    <string name="item_list">See Full WorkFlow</string>
    <string name="item_select">Log Progress</string>
    <string name="item_complete">Complete</string>
    <string name="lms_canvasLogin">Connect to Canvas</string>
    <string name="course_list">My Courses</string>
    <string name="course_default">-- No Courses --</string>
    <string name="course_add">Join A Course</string>
    <string name="course_confirm_unenroll">Confirm End Enrollment</string>
    <string name="course_unenroll_prefix">Withdraw From Course\u0020</string>
    <string name="settings_forecast">Forecast:\u0020</string>
    <string name="logout">Log Out of LMStudy</string>
    <string name="LMSLogo">LMStudy v.1.0</string>
    <string name="StudentWelcome">Welcome back student user!</string>
    <string name="TeacherWelcome">Welcome back teacher user!</string>
    <string name="word_course">Course</string>
    <string name="course_work">Course Work</string>
    <string name="course_show">Show Workload</string>
    <string name="course_show_id">Show Course Code</string>
    <string name="course_show_pw">Show Admin Code</string>
    <string name="course_drop">Drop Course</string>
    <string name="course_open">Open a Course</string>
    <string name="open_prompt">Enter A Name For Your Course</string>
    <string name="join_prompt">Enter A Course Code</string>
    <string name="admin_prompt">Enter An Admin pw</string>
    <string name="select_courses">Select Courses to Include</string>
    <string name="select_items">Select Items to Include</string>
    <string name="single_input_default">-- Text --</string>
    <string name="login_mode_switch">I am a Teacher/TA</string>
    <string name="forecast_prompt">Enter a new Forecast Value (Numeric)</string>
    <string name="progress_prompt">Enter a new Progress Value (0–100)</string>
    <string name="badprogress_prompt">Enter a Numeric Value (0–100)</string>
    <string name="confirm">Confirm</string>
    <string name="no_items">No Items Found</string>
    <string name="associate_menu">Saving:\u0020</string>
    <string name="missing_creds">Username &amp; Password Required</string>
    <string name="connection_err">Connection Error</string>
    <string name="login_ok">Login Successful</string>
    <string name="login_bad">Bad Credentials for Login</string>
    <string name="signup_bad">Username Already in Use</string>
    <string name="complete_success">Item Completed Successfully</string>
    <string name="complete_fail">Complete Operation Failed</string>
    <string name="enroll_fail">Enroll Operation Failed</string>
    <string name="forecast_err">Input must be a positive integer</string>
    <string name="add_err">Open Operation Failed</string>
    <string name="join_err">Join Operation Failed</string>
    <string name="canvas_err">Install a Canvas Token to access Canvas Demo</string>
    <string name="log_btn">Log Progress</string>
    <string name="edit_assignment">Edit Assignment</string>

    <string name="app_name">LMStudy</string>
    <string name="your_schedule_title">Your Schedule</string>
    <string name="ret_user_settings">Retrieving User Settings</string>
    <string name="launching">Launching LMStudy</string>
    <string name="sign_in_title">Sign In</string>
    <string name="login_caps">LOGIN</string>
    <string name="or">or</string>
    <string name="signup_caps">SIGN UP</string>
    <string name="create_account">Create a new account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="default_txt">Default</string>
    <string name="new_assignment">New Assignment</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="current_assignment">Current Assignment: </string>
    <string name="assignment_info">Assignment Info</string>
    <string name="assignment_name_txt">Assignment Name</string>
    <string name="assignment_name">Assignment Name: </string>
    <string name="assignee_name">Assignee: </string>
    <string name="assignment_type">Assignment Type: </string>
    <string name="assignment_course">Course: </string>
    <string name="due_date_is">Due Date: </string>
    <string name="assignment_priority">Priority: </string>
    <string name="priority">Priority</string>
    <string name="hours">Hours</string>
    <string name="hours_to_work">Hours to work: </string>
    <string name="complete_assignment">Complete Assignment</string>
    <string name="remove_assignment">Remove Assignment</string>
    <string name="remove_question_text">Are you sure you want to remove this assignment?</string>
    <string name="select_date">Select Date</string>
    <string name="refresh">Refresh</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="canvas">CANVAS</string>
    <string name="course_options">Course Options</string>
    <string name="settings">Settings</string>
    <string name="default_reminder_txt">Remember to take breaks and drink enough water! ☻</string>
    <string-array name="assignment_types">
        <item>Exam</item>
        <item>Homework</item>
        <item>Project</item>
        <item>Quiz</item>
    </string-array>
    <string-array name="priority_levels">
        <item>Very Low</item>
        <item>Low</item>
        <item>Moderate</item>
        <item>High</item>
        <item>Very High</item>
    </string-array>
</resources>