<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/student_menu_background"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/student_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/LMSLogo"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/student_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StudentWelcome"
        android:textColor="#C5C5C5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_logo" />

    <TextView
        android:id="@+id/next_label"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/next_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_welcome" />

    <Button
        android:id="@+id/next_item"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minHeight="60dp"
        android:text="@string/default_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_label" />

    <TextView
        android:id="@+id/forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_forecast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_item" />

    <Button
            android:id="@+id/canvas_btn"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/ergo_button"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/canvas"
            android:textAlignment="center"
            android:textSize="24sp"
            app:icon="@drawable/canvas_logo"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconSize="30dp"
            app:iconTint="#FF0000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/course_btn"/>

    <Button

            android:id="@+id/course_btn"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:background="@drawable/ergo_button"
            android:text="@string/course_options"
            android:textSize="20sp"
            android:layout_marginBottom="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/settings_btn"/>

    <Button
            android:id="@+id/settings_btn"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:background="@drawable/ergo_button"
            android:text="@string/settings"
            android:textSize="20sp"
            android:layout_marginBottom="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/student_bottom"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/student_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/reminder_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/default_reminder_txt"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>